--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "Api RESTful del Master en Framenworks para JS",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Carmen Rendon",
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.7",
     "validator": "^12.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
